--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
-    <!-- <link href="https://iamdevlinph.github.io/AInewsletter/css/bootstrap.css" rel="stylesheet"> -->
+    <!-- <link href="https://iamdevlinph.github.io/AIcasesharing/css/bootstrap.css" rel="stylesheet"> -->
 
     <!-- Custom CSS -->
-    <link href="https://iamdevlinph.github.io/AInewsletter/css/2-col-portfolio.css" rel="stylesheet">
+    <link href="https://iamdevlinph.github.io/AIcasesharing/css/2-col-portfolio.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,7 +33,7 @@
     <div class="container">
         <br>
         <!-- Begin Open in browser -->
-        <img src="https://iamdevlinph.github.io/AInewsletter/ailogo.png">
+        <img src="https://iamdevlinph.github.io/AIcasesharing/ailogo.png">
         <!-- End open in browser -->
 
         <!-- Begin Newsletter Image -->
@@ -193,9 +193,9 @@
 
     <!-- Begin Scripts -->
     <!-- jQuery -->
-    <script src="https://iamdevlinph.github.io/AInewsletter/js/jquery.js"></script>
-    <script src="https://iamdevlinph.github.io/AInewsletter/js/bootstrap.min.js"></script>
-    <script src="https://iamdevlinph.github.io/AInewsletter/js/custom.js"></script>
+    <script src="https://iamdevlinph.github.io/AIcasesharing/js/jquery.js"></script>
+    <script src="https://iamdevlinph.github.io/AIcasesharing/js/bootstrap.min.js"></script>
+    <script src="https://iamdevlinph.github.io/AIcasesharing/js/custom.js"></script>
 
 </body>
 
