--- a/index.html
+++ b/index.html
@@ -1,202 +1,166 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>AI Case Sharing</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <!-- <link href="https://iamdevlinph.github.io/AIcasesharing/css/bootstrap.css" rel="stylesheet"> -->
-
-    <!-- Custom CSS -->
-    <link href="https://iamdevlinph.github.io/AIcasesharing/css/2-col-portfolio.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
+<body style="margin: 0;background: #F5F5F5;padding-top: 0px!important;">
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" style="margin: auto !important;width: 70% !important;background: #fff !important; overflow: hidden !important;">
         <br>
         <!-- Begin Open in browser -->
-        <img src="https://iamdevlinph.github.io/AIcasesharing/ailogo.png">
+        <img src="https://iamdevlinph.github.io/AIcasesharing/ailogo.png" style="border: 0;max-width: 100%;padding: 5px !important;">
         <!-- End open in browser -->
 
         <!-- Begin Newsletter Image -->
         <div>
-            <div class="image">
-                <div class="block-intro" style="font-size:50px!important;padding-top:30px!important;line-height:1.1!important;">Case Sharing<br>Title: Client's Name - Subject - Date</div>
+            <div class="image" style="text-align: center;position: relative !important;width: 100% !important;margin: auto !important;overflow: hidden !important;">
+                <div class="block-intro" style="font-size: 40px!important;padding-top: 30px!important;line-height: 1.1!important;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Case Sharing<br>Title: Client's Name - Subject - Date</div>
             </div>
         </div>
         <!-- End Newsletter Image -->
 
         <!-- Begin Block Header -->
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-header">Case Description</div>
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Case Description</div>
             </div>
         </div>
         <!-- End Block Header -->
 
-        <!-- Begin Block Content -->
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-intro">
-                    Inspection Information:
-                </div>
-                <div class="block-intro">
-                    Expected Outcome:
-                </div>
-                <center>
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </center>
-                <br>
-                <div class="block-intro">
-                    Final Outcome:
-                </div>
-                <div class="block-intro">
-                    Results or Impacts:
-                </div>
-                <center>
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </center>
-            </div>
-        </div>
-        <!-- End Block Content -->
-
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-header">Root Causes</div>
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <table border="0" style="border-spacing: 0;border-collapse: collapse;">
+                    <tr>
+                        <td style="padding: 0;vertical-align:top!important;" width="50%"><div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Inspection Information:</div><span style="padding-left:30px;">Product:</span><br><br><span style="padding-left:30px;">Claim Severity:</span></td>
+                        <td rowspan="2" bgcolor="#B11820" width="2px"></td>
+                        <td rowspan="2" style="padding-left: 80px;vertical-align:top!important;"><img class="img-responsive" src="http://placehold.it/400x500" alt="" style="border: 0;max-width: 100%;padding: 5px !important;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0;vertical-align:top!important;"><div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Expected Outcome:</div></td>
+                    </tr>
+                </table>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12 portfolio-item">
-                <p class="p-sharing">Clarify the reasons why inspector made mistakes: GI, IP not clear enough? Lack of training? Inspector missed key points of inspection? Keep ask the reasons behind, do not stop at the first “why”. (see the example below)</p>
-                <table class="table table-bordered table-striped">
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <table border="0" style="border-spacing: 0;border-collapse: collapse;">
+                    <tr>
+                        <td style="padding: 0;vertical-align:top!important;" width="50%"><div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Final Outcome:</div></td>
+                        <td rowspan="2" bgcolor="#B11820" width="2px"></td>
+                        <td rowspan="2" style="padding-left: 80px;vertical-align:top!important;"><img class="img-responsive" src="http://placehold.it/400x500" alt="" style="border: 0;max-width: 100%;padding: 5px !important;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0;vertical-align:top!important;"><div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Results or Impacts:</div></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Root Causes</div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-md-12 portfolio-item" style="margin-bottom: 25px;">
+                <p class="p-sharing" style="text-align: justify;margin-left: 10px !important;padding: 10px !important;">Clarify the reasons why inspector made mistakes: GI, IP not clear enough? Lack of training? Inspector missed key points of inspection? Keep asking the reasons behind, do not stop at the first "why". (see the example below)</p>
+                <table style="border-spacing: 0;border-collapse: collapse;" border="1" width="100%">
                     <thead>
                         <tr>
-                            <th>Problem</th>
-                            <th>Why</th>
-                            <th>Why</th>
-                            <th>Why</th>
-                            <th>Why</th>
-                            <th>Why</th>
+                            <th style="padding: 0;">Problem</th>
+                            <th style="padding: 0;">Why</th>
+                            <th style="padding: 0;">Why</th>
+                            <th style="padding: 0;">Why</th>
+                            <th style="padding: 0;">Why</th>
+                            <th style="padding: 0;">Why</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
                         </tr>
                         <tr>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
                         </tr>
                         <tr>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-header">Corrective Actions</div>
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Corrective Actions</div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12 portfolio-item">
-                <table class="table table-bordered table-striped">
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-md-12 portfolio-item" style="margin-bottom: 25px;">
+                <table style="border-spacing: 0;border-collapse: collapse;" border="1" width="100%">
                     <thead>
                         <tr>
-                            <th>Action</th>
-                            <th>Responsible</th>
-                            <th>Implement Date</th>
-                            <th width="500px">Comments</th>
+                            <th style="padding: 0;">Action</th>
+                            <th style="padding: 0;">Responsible</th>
+                            <th style="padding: 0;">Implement Date</th>
+                            <th style="padding: 0;">Comments</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
                         </tr>
                         <tr>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
                         </tr>
                         <tr>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-header">Summary</div>
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Summary</div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-header">For any questions, please contact:</div>
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">For any questions, please contact:</div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 portfolio-item">
-                <div class="block-intro">Name:</div><p class="contact-details">Devlin Pajaron</p>
-                <div class="block-intro">Email:</div><p class="contact-details">devlin.pajaron@asiainspection.com</p>
-                <div class="block-intro">Tel:</div><p class="contact-details">236 74214</p>
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Name:</div><p class="contact-details" style="text-align: justify;margin-left: 10px !important;padding: 10px !important;padding-left: 50px !important;margin-top: -15px !important;font-size: 20px !important;">Devlin Pajaron</p>
+                <div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Email:</div><p class="contact-details" style="text-align: justify;margin-left: 10px !important;padding: 10px !important;padding-left: 50px !important;margin-top: -15px !important;font-size: 20px !important;">devlin.pajaron@asiainspection.com</p>
+                <div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Tel:</div><p class="contact-details" style="text-align: justify;margin-left: 10px !important;padding: 10px !important;padding-left: 50px !important;margin-top: -15px !important;font-size: 20px !important;">236 74214</p>
             </div>
         </div>
-
     </div>
-
-    <!-- Begin Scripts -->
-    <!-- jQuery -->
-    <script src="https://iamdevlinph.github.io/AIcasesharing/js/jquery.js"></script>
-    <script src="https://iamdevlinph.github.io/AIcasesharing/js/bootstrap.min.js"></script>
-    <script src="https://iamdevlinph.github.io/AIcasesharing/js/custom.js"></script>
-
 </body>
-
-</html>
