--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="margin: 0;background: #F5F5F5;padding-top: 0px!important;">
+<body style="margin: 0;background: #F5F5F5;padding-top: 0px!important;font-family: 'Arial'">
     <!-- Page Content -->
     <div class="container" style="margin: auto !important;width: 70% !important;background: #fff !important; overflow: hidden !important;">
         <br>
