--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
                 <table border="0" style="border-spacing: 0;border-collapse: collapse;">
                     <tr>
-                        <td style="padding: 0;vertical-align:top!important;" width="50%"><div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Inspection Information:</div><span style="padding-left:30px;">Product:</span><br><br><span style="padding-left:30px;">Claim Severity:</span></td>
+                        <td style="padding: 0;vertical-align:top!important;" width="50%" height="50%"><div class="block-intro" style="font-size: 18px;line-height: 22px;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Inspection Information:</div><span style="padding-left:30px;">Product:</span><br><br><span style="padding-left:30px;">Claim Severity:</span></td>
                         <td rowspan="2" bgcolor="#B11820" width="2px"></td>
                         <td rowspan="2" style="padding-left: 80px;vertical-align:top!important;"><img class="img-responsive" src="http://placehold.it/400x500" alt="" style="border: 0;max-width: 100%;padding: 5px !important;"></td>
                     </tr>
