PRE css updated

--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
         <img src="https://iamdevlinph.github.io/AIcasesharing/ailogo.png" style="border: 0;max-width: 100%;padding: 5px !important;">
         <!-- End open in browser -->
 
-        <!-- Begin Newsletter Image -->
         <div>
             <div class="image" style="text-align: center;position: relative !important;width: 100% !important;margin: auto !important;overflow: hidden !important;">
-                <div class="block-intro" style="font-size: 40px!important;padding-top: 30px!important;line-height: 1.1!important;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Case Sharing<br>Title: Client's Name - Subject - Date</div>
+                <div class="block-intro" style="font-size: 40px!important;padding-top: 30px!important;line-height: 1.1!important;color: #b31820;font-weight: bold;margin-left: 10px;margin-bottom: 10px;padding-left: 9px;">Case Sharing</div>
             </div>
         </div>
-        <!-- End Newsletter Image -->
+
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-md-12 portfolio-item" style="margin-bottom: 25px;">
+                <table style="border-spacing: 0;border-collapse: collapse;" border="1" width="100%">
+                    <thead>
+                        <tr>
+                            <th style="padding:5px;font-size:25px;color:#B31820;">Client's Name</th>
+                            <th style="padding:5px;font-size:25px;color:#B31820;">Subject</th>
+                            <th style="padding:5px;font-size:25px;color:#B31820;">Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                            <td style="padding: 0;">&nbsp;</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
         <!-- Begin Block Header -->
         <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
@@ -54,6 +73,12 @@
 
         <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
             <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
+                <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Image Templates</div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-left: 10px !important;padding-right: 10px !important;">
+            <div class="col-lg-12 portfolio-item" style="margin-bottom: 25px;">
                 <div class="block-header" style="background: #B31820;color: white;padding: 7px 20px 7px 20px;text-transform: uppercase;font-weight: bold;font-size: 17px;margin-bottom: 10px;width: 120% !important;">Root Causes</div>
             </div>
         </div>
@@ -64,12 +89,12 @@
                 <table style="border-spacing: 0;border-collapse: collapse;" border="1" width="100%">
                     <thead>
                         <tr>
-                            <th style="padding: 0;">Problem</th>
-                            <th style="padding: 0;">Why</th>
-                            <th style="padding: 0;">Why</th>
-                            <th style="padding: 0;">Why</th>
-                            <th style="padding: 0;">Why</th>
-                            <th style="padding: 0;">Why</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Problem</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Why</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Why</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Why</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Why</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Why</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -113,10 +138,10 @@
                 <table style="border-spacing: 0;border-collapse: collapse;" border="1" width="100%">
                     <thead>
                         <tr>
-                            <th style="padding: 0;">Action</th>
-                            <th style="padding: 0;">Responsible</th>
-                            <th style="padding: 0;">Implement Date</th>
-                            <th style="padding: 0;">Comments</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Action</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Responsible</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Implement Date</th>
+                            <th style="color:white;padding: 5px;" bgcolor="#A0A0A0">Comments</th>
                         </tr>
                     </thead>
                     <tbody>
